bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: not found: value A
  if (litMessage==A){
                  ^BDR:6: error: not found: value Z
   }else if (litMessage==Z){
                         ^